small fix logo and alignment of footer

--- a/src/css/imports/_styles.css
+++ b/src/css/imports/_styles.css
@@ -36,3 +36,8 @@
 #googleMapsIframe {
   box-shadow: 1px 1px 10px 10px #00000029
 }
+/***************FOOTER********************/
+.socialMediaDiv {
+  margin: auto;
+  text-align: center;
+}
